# basa

./: .gitignore  404.html  LICENSE  README.md  index.html  llms-full.txt  llms.txt  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
about/: index.html
api/normalize/: index.html  index.md
api/quick/: index.html
api/slang/: index.html  index.md
api/typo/: index.html
changelog/: index.html
docs/: about.md  changelog.md  faq.md  index.md  philosophy.md
docs/api/: quick.md  slang.md  typo.md
docs/guides/: typo-correction.md
docs/stylesheets/: custom.css
faq/: index.html
guides/batch-processing/: index.html  index.md
guides/social-media/: index.html  index.md
guides/typo-correction/: index.html
installation/: index.html  index.md
philosophy/: index.html
quickstart/: index.html  index.md
roadmap/: index.html  index.md
search/: search_index.json
src/basa/: __init__.py
src/basa/core/: normalize.py  quick.py  slang.py  typo.py
tests/: test_normalize.py
