[project]
name = "basa"
version = "0.1.0"
description = "Modern NLP for Indonesian and regional languages"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Muanai Khalifah Revindo", email = "muanaikhalifahr@gmail.com"}
]
dependencies = [
    "mkdocs-ask-ai>=1.1.3",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
serving = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0"
]
evaluation = [
    "rouge-score>=0.1.2",
    "bert-score>=0.3.13",
    "seqeval>=1.2.2"
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.3.0",
    "mypy>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = []
fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
